test/Runner/errors/tests/Emerge2.runtime.js
emerge(async () => {
	await new Promise(() => {
		throw new Error()
	})
});
